--- a/traducao_exemplo5.html
+++ b/traducao_exemplo5.html
@@ -1,3 +1,9 @@
 <h1>Implementando uma função de rotação que não corta suas imagens</h1>
 <p>Vamos começar dizendo que não há nada de errado com cv2.getRotationMatrix2D e cv2.warpAffine funções que são usadas
 para rotacionar imagens no OpenCV.</p>
+<p>Na verdade, essas funções nos dão mais liberdade nós nos sentimos mais confortáveis com elas.( mais ou menos
+como gerenciar memoria em C versos coletor de lixo do Java. )</p>
+<p>A função cv2.getRotation2D não se importa se nós gostariamos que toda a imagem girada fosse mantida.  </p>
+
+<p>Não importa se as imagens são cortadas.</p>
+
