--- a/traducao_exemplo5.html
+++ b/traducao_exemplo5.html
@@ -6,4 +6,7 @@ como gerenciar memoria em C versos coletor de lixo do Java. )</p>
 <p>A função cv2.getRotation2D não se importa se nós gostariamos que toda a imagem girada fosse mantida.  </p>
 
 <p>Não importa se as imagens são cortadas.</p>
+<p>Isso não vai ajudar você, vai ser um tiro no pé( eu descobri isso da maneira mais difícil, eu levei
+3 semanas para resolver o problema. ) </p>
+<p>Em vez disso, oque você precisa é entender oque é a matriz de rotação e como ela é construída.</p>
 
