--- a/traducao_exemplo5.html
+++ b/traducao_exemplo5.html
@@ -9,4 +9,4 @@ como gerenciar memoria em C versos coletor de lixo do Java. )</p>
 <p>Isso não vai ajudar você, vai ser um tiro no pé( eu descobri isso da maneira mais difícil, eu levei
 3 semanas para resolver o problema. ) </p>
 <p>Em vez disso, oque você precisa é entender oque é a matriz de rotação e como ela é construída.</p>
-
+<p>Você ve quando gira ima imagem com OpenCV você chama cv2.getRotationMatrix2D que retorna uma matriz M que se parece com isso:</p>
